# Friday

./: .env.example  .gitignore  CLAUDE.md  README.md  import json.py  pyproject.toml
.claude/: overview.md
friday/: __init__.py  __main__.py  agent.py  app.py  config.py  file_search.py  graph.py  llm.py  loop.py  memory.py  pipeline.py  tools.py
friday/agents/: __init__.py  _model.py  coding_agent.py  desktop.py  email.py  research.py  state_schema.py
friday/ambient/: __init__.py  conversation_log.py  extractor.py  loop.py  now_writer.py  session_log.py  trigger.py
friday/capture/: audio.py  audio_aec.py  screenshot.py
friday/memory/: context.py  search.py
friday/orchestrate/: gpt4o.py  llm.py
friday/speak/: elevenlabs.py
friday/tools/: base.py  claude_code.py  desktop.py  gmail.py  search.py
friday/transcribe/: deepgram.py
scripts/: test_passthrough.py
tests/: test_conversation_log.py  test_file_search.py  test_proactive_trigger.py  test_session_log.py
